style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Share+Tech&family=Share+Tech+Mono&family=Source+Sans+Pro&display=swap');

body{
    width: 100%;
    height: 100%;
    margin: 0;
    padding-bottom: 18px;
    background-color: rgb(43, 21, 21);
    font-family: 'Source Sans Pro', sans-serif;
}
h1{
    color: #fff;
    font-size: 42px;
    margin-top: 16px;
    margin-bottom: 18px;
    text-align: center;
    font-family: 'Share Tech Mono', monospace;
    text-shadow: 0px 0px 10px rgb(141, 23, 37);
    text-shadow: 3px 3px 0px rgb(141, 23, 37);
}
h3{
    font-family: 'Share Tech Mono', monospace;
}

header{
    padding: 20px;
    padding-bottom: 10px;

    background-color:rgb(224, 69, 86);
    color: #fff;
    box-shadow: 0px 3px 12px rgb(224, 69, 86);
}
#searchContainer{
    width: 90%;
    margin: 0 auto;
}

#searchForm{
    width: 100%;
    display: flex;
}
input[type="search"]{
    width: 100%;
    height: 38px;
    padding-left: 18px;
    padding-right: 14px;
    border: none;
    border-radius: 10px;
    outline: none;
    transition: 0.3s;
}
input[type="search"]:focus, input[type="search"]:hover{
    box-shadow: 0px 0px 15px rgb(141, 23, 37);
}

button[type="submit"]{
    width: 38px;
    height: 38px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    color: rgb(141, 23, 37);
    outline: none;
    transition: 0.3s;
}
button[type="submit"]:hover{
    box-shadow: 0px 0px 15px rgb(141, 23, 37);
}

#btnOption{
    margin: 15px 0px 10px 10px;
    cursor: pointer;
    display: inline-block;
    color: rgba(43, 21, 21, 1);
    font-size: 18px;
    font-family: 'Share Tech Mono', monospace;
}
#btnOption i{
    color: rgb(141, 23, 37);
    transition: color 0.2s;
}
#btnOption:hover i{
    color: rgba(43, 21, 21, 1);
}
#options{
    margin: 5px 0;
    padding: 0;
    list-style: none;
    color: rgb(141, 23, 37);
    
    display: none;
}

#options li{
    padding: 10px;
    margin-bottom: 8px;    
    border-radius: 5px;
    color: rgb(141, 23, 37);
    background-color: rgba(255,255,255,0.8);
    transition: background-color 0.5s;
}
#options li:hover{
    background-color: rgba(255,255,255,1);
}

#container{
    width: 90%;
    margin: 0 auto;
    position: relative;
}

#cards{
    margin-top: 34px;
    list-style: none;
    padding: 0;
}
/* Start of RWD flexbox setting */
.card, .mainContain{
    display: flex;
}
.card .mainContain{
    flex: 2;
}
.card .desContain{
    flex: 3;
}
.card .mainContain .img, .card .mainContain .contain{
    flex: 1;
}
.card .mainContain{
    min-width: 530px;
}
.card .mainContain .img{
    max-width: 280px;
}
@media (max-width: 992px) {
    .card{
        flex-direction: column;
    }
}
@media (max-width: 768px) {
    .card .mainContain{
        flex-direction: column;
        min-width: 0;
    }
    .card .mainContain .img{
        flex: 0 1 180px;
        max-width: 100%;
        margin: 0px auto;
    }
}
@media (max-width: 576px){
    h1{
        font-size: 7vw;
    }
}
/* End of RWD flexbox setting */

.card{
    margin: 30px 0;
    overflow: hidden;
    background-color: white;
    border-radius: 10px;
    box-shadow: 6px 6px 0px rgb(224, 69, 86);
}
.card .mainContain{
    padding: 20px;
}
.card .img{
    background: #999;
    background-size: cover;
    background-position:center;
    height: 180px;
    width: 280px;

    margin: 0px 10px;
}

.card .contain{
    margin: 0px 10px;    
}
.card h3{
    margin: 8px 0px;
    letter-spacing: 1px;
}
.card .tag{
    list-style: none;
    padding: 0;
}
.card .tag li{
    padding: 3px 8px;
    margin-right: 8px;
    margin-bottom: 5px;
    display: inline-block;

    font-size: 13px;
    color: white;
    background: rgb(224, 69, 86) ;
}

.card .info{
    list-style-type: square; 
    padding-left: 16px;
    margin-top: 10px;
}

.card .desContain{
    padding: 30px;
    text-align: justify;
    cursor: pointer;
    color: rgb(224, 69, 86);
    
    background-color: #ddd;
    transition: 0.5s;
    font-size: 14px;
    font-family: 'Roboto Slab', serif;
}
.card .desContain:hover{
    background-color: #ccc;
}

.card .desContain p{
    margin-top: 0;
}

.collapse{
    overflow:hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 6;
    -webkit-box-orient: vertical;
}

.seeMore{
    padding: 5px;
    margin-top: 12px;
}
.seeMore i{
    font-size: 12px;
}

.placeholder{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    display: inline-block;
    margin-top: 150px;
    padding-bottom: 100px;

    color: rgb(224, 69, 86);
    font-size: 28px;
    font-family: 'Share Tech Mono', monospace;
    text-align: center;
}
.noResult{
    display: none;
}
.la-pacman{
    color: rgb(224, 69, 86);
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    display: none;
}

.toTop{
    width: 25px;
    height: 25px;
    position: fixed;
    right: 25px;
    bottom: 25px;

    text-align: center;
    font-size: 20px;
    padding: 10px;
    display:none;

    background-color: rgb(224, 69, 86);
    border-radius: 5px;
    color: white;
    cursor: pointer;
}



/* 隱藏滾動條 */
body::-webkit-scrollbar {
    display: none;
}
body {
    -ms-overflow-style: none;
}

